style: fixed gap on dashboard__container
the gap on dashboard__container was too big, rendering components outside of the average monitor size.

--- a/src/components/dashboard/styles.css
+++ b/src/components/dashboard/styles.css
@@ -248,6 +248,11 @@
     z-index: 4;
 }
 
+@media screen and (max-width: 1900px) {
+    .dashboard__container {
+        gap: 3.5rem;
+    }
+}
 
 @media screen and (max-width: 1630px) {
     .dashboard__container {
